--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+KEYSTORE_PATH=./keystore.jks
+KEYSTORE_PASSWORD=alwaysloser
+KEYSTORE_ALIAS=YouCanYouUp
+KEYSTORE_ALIAS_PASSWORD=fuckyou
