--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -31,7 +31,7 @@ ext {
             ],
             json                       : [
                     'com.alibaba:fastjson:1.1.70.android',
-                    "com.squareup.moshi:moshi-kotlin:1.9.3",
+                    "com.google.code.gson:gson:2.8.6",
             ],
             glide                      : [
                     'com.github.bumptech.glide:glide:4.9.0',
