调整部分代码

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation libraries.androidXLibraries
     implementation libraries.koinLibraries
     implementation project(":utils")
+    implementation project(":widget")
 }
