--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,12 +21,14 @@ ext {
                     'jp.wasabeef:recyclerview-animators:3.0.0',
                     "com.google.android.material:material:1.2.1",
                     "androidx.lifecycle:lifecycle-extensions:2.2.0",
-                    "androidx.lifecycle:lifecycle-runtime:2.2.0"
+                    "androidx.lifecycle:lifecycle-runtime:2.2.0",
+                    "androidx.work:work-runtime-ktx:2.5.0",
             ],
             koinLibraries              : [
                     "org.koin:koin-androidx-scope:$koinVersion",
                     "org.koin:koin-androidx-fragment:$koinVersion",
                     "org.koin:koin-androidx-ext:$koinVersion",
+                    "org.koin:koin-androidx-workmanager:$koinVersion",
             ],
             json                       : [
                     'com.alibaba:fastjson:1.1.70.android',
@@ -64,7 +66,7 @@ ext {
             rxpermissions              : 'com.github.tbruyelle:rxpermissions:0.12',
             database                   : ["androidx.room:room-runtime:2.2.6",
                                           "androidx.room:room-ktx:2.2.6"],
-            databaseCompiler           : "androidx.room:room-compiler",
+            databaseCompiler           : "androidx.room:room-compiler:2.2.6",
             refresh                    : [
                     "com.scwang.smart:refresh-layout-kernel:2.0.3",
                     "com.scwang.smart:refresh-header-classics:2.0.3",
