--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,6 +19,7 @@ ext {
                     "androidx.recyclerview:recyclerview:1.1.0",
                     'androidx.constraintlayout:constraintlayout:1.1.3',
                     'jp.wasabeef:recyclerview-animators:3.0.0',
+                    'com.github.fondesa:recycler-view-divider:3.5.0',
                     "com.google.android.material:material:1.2.1",
                     "androidx.lifecycle:lifecycle-extensions:2.2.0",
                     "androidx.lifecycle:lifecycle-runtime:2.2.0",
