--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -56,6 +56,7 @@ ext {
                     "com.squareup.retrofit2:retrofit:2.9.0",
                     "com.squareup.okhttp3:logging-interceptor:3.14.9",
                     "com.squareup.retrofit2:converter-gson:2.9.0",
+                    "com.squareup.retrofit2:converter-scalars:2.9.0",
             ],
             logging                    : "com.jakewharton.timber:timber:4.7.1",
             tab                        : "me.majiajie:pager-bottom-tab-strip:2.3.0X",
