--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,8 +1,8 @@
 ext {
     // Sdk and tools
     minSdkVersion = 21
-    targetSdkVersion = 29
-    compileSdkVersion = 29
+    targetSdkVersion = 30
+    compileSdkVersion = 30
     kotlinVersion = "1.4.21"
     koinVersion = "2.2.2"
     // dependencies
@@ -10,8 +10,6 @@ ext {
             kotlinLibraries            : [
                     'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3',
                     "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion",
-                    "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0",
-                    "androidx.transition:transition:1.3.1"
             ],
             androidXLibraries          : [
                     'androidx.core:core-ktx:1.3.0',
@@ -24,6 +22,10 @@ ext {
                     "androidx.lifecycle:lifecycle-extensions:2.2.0",
                     "androidx.lifecycle:lifecycle-runtime:2.2.0",
                     "androidx.work:work-runtime-ktx:2.5.0",
+                    "androidx.fragment:fragment-ktx:1.3.6",
+                    "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0",
+                    "androidx.transition:transition:1.3.1",
+                    "androidx.activity:activity-ktx:1.3.0"
             ],
             koinLibraries              : [
                     "org.koin:koin-androidx-scope:$koinVersion",
