--- a/ocr/build.gradle
+++ b/ocr/build.gradle
@@ -43,4 +43,5 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation libraries.kotlinLibraries
+    implementation project(":utils")
 }
